--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML Template</title>
- <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>HTML template</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
   <!--All the HTML content goes in here -->
 
- <header>
-   <h1>HTML Template</h1>
+  <header>
+    <h1>HTML Template</h1>
   </header>
 
   <main>
-    <p>Some text goes here</p>
+    <p>Lorem ipsum dolor sit amet.</p>
     <img src="images/logo.svg" alt="">
     <a href="http://www.wikipedia.org">Wikipedia</a>
   </main>
